--- a/src/app/blog/blog-details/blog-details.component.scss
+++ b/src/app/blog/blog-details/blog-details.component.scss
@@ -1,11 +1,38 @@
-.cont{
-                form,label,small,p{
-                font-family: 'Roboto Condensed';
-font-style: normal;
-                }
-                small{
-                                font-weight: 400;
-                                font-size: 16px;
-                                text-transform: capitalize;
-                }
+.cont {
+  form,
+  label,
+  small,
+  p {
+    font-family: "Roboto Condensed";
+    font-style: normal;
+  }
+  small {
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: capitalize;
+  }
+}
+.contupper {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+}
+.conttext {
+  background: linear-gradient(109.61deg, #a54e2b -53.83%, #dc9853 62.61%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+.div-cont {
+  background-image: url("/assets/images/dg.svg");
+}
+.contsermon,
+.div-cont {
+  background-position: center;
+  background-size: cover;
+}
+.contsermon {
+  background-image: url("/assets/images/mb.svg");
+}
+.listype li {
+  list-style-type: circle;
 }
