--- a/src/app/sermon/sermon-details/sermon-details.html
+++ b/src/app/sermon/sermon-details/sermon-details.html
@@ -1,3 +1,110 @@
+<div class="flex flex-col w-[90%] mx-[5%] contupper gap-10 my-10">
+  <div class="flex flex-col items-center">
+    <h1 class="conttext md:text-[15px] font-bold">Relationship</h1>
+    <h1 class="font-bold text-[#161722] uppercase md:text-[40px]">
+      HOW TO SHOW COMPASSION
+    </h1>
+    <div class="flex justify-center gap-3">
+      <small class="text-[16px] font-normal text-[#161722]">13 May, 2018</small>
+      <p class="text-[16px] font-normal text-[#161722]">By Mathew Johnsons</p>
+    </div>
+  </div>
+  <div class="div-cont w-full md:h-[500px] h-[300px]"></div>
+
+  <div class="flex flex-col items-center">
+    <h1 class="font-bold text-[#161722] uppercase md:text-[40px]">
+      LOREM IPSUM DOLOR SIT AMET
+    </h1>
+    <div class="flex justify-center md:w-[60%] md:mx-[20%] mt-4">
+      <p
+        class="text-[18px] text-[#161722] leading-[24px] lg:text-start text-center"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation. Ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Non tellus orci ac
+        auctor augue mauris augue neque gravida.
+      </p>
+    </div>
+    <div class="contsermon w-[60%] mx-[20%] md:h-[300px] h-[300px] mt-10"></div>
+    <div class="flex justify-center flex-col md:w-[60%] md:mx-[20%] mt-4">
+      <h1 class="font-bold text-[#161722] uppercase md:text-[40px]">
+        LOREM IPSUM DOLOR SIT AMET
+      </h1>
+      <p
+        class="text-[18px] text-[#161722] leading-[24px] lg:text-start text-center mt-4"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation. Ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Non tellus orci ac
+        auctor augue mauris augue neque gravida.
+      </p>
+      <div class="flex flex-row justify-between items-end mt-10 gap-4">
+        <div class="h-[50px] w-[3px] bg-[#FFD2A4]"></div>
+
+        <p class="text-[18px] text-[#161722] lg:text-start text-center">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui
+          faucibus in ornare quam viverra orci sagittis eu volutpat.
+        </p>
+      </div>
+
+      <div class="flex flex-row mt-10">
+        <p class="text-[18px] text-[#161722] lg:text-start text-center">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation. Ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Non tellus orci ac auctor augue mauris augue neque gravida.
+        </p>
+      </div>
+    </div>
+    <div class="flex justify-center flex-col md:w-[60%] md:mx-[20%] mt-4">
+      <h1 class="font-bold text-[#161722] uppercase md:text-[40px]">
+        LOREM IPSUM DOLOR SIT AMET
+      </h1>
+      <p
+        class="text-[18px] text-[#161722] leading-[24px] lg:text-start text-center mt-4"
+      >
+        We both celebrate and challenge the culture around us as we orient our
+        lives around Jesus. We want to serve the world around us. It’s why we
+        support mission work all across the globe Regardless of what your next
+        step in faith is, we want to help you take that next step Our church
+        is10% of our annual income to
+      </p>
+      <ul class="listype">
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing</li>
+        <li>Purus sit amet luctus venenatis lectus magna</li>
+        <li>Aenean vel elit scelerisque mauris. Imperdiet sed euismod</li>
+      </ul>
+    </div>
+    <div class="flex justify-center flex-col md:w-[60%] md:mx-[20%] mt-4">
+      <p
+        class="text-[18px] text-[#161722] leading-[24px] lg:text-start text-center mt-4"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation. Ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Non tellus orci ac
+        auctor augue mauris augue neque gravida.
+      </p>
+    </div>
+    <div class="flex justify-center flex-col md:w-[60%] md:mx-[20%] mt-4">
+      <p
+        class="text-[18px] text-[#161722] leading-[24px] lg:text-start text-center mt-4"
+      >
+        Saepe magni aut maxime vel voluptatem. Ab eveniet neque placeat qui
+        porro ab minus voluptas. Dicta praesentium neque vero mollitia aperiam
+        sed enim. Lacinia quis vel eros donec ac odio.
+      </p>
+    </div>
+  </div>
+</div>
 <label class="text-black font-normal text-[20px] ml-[10%] md:ml-32 lg:ml-60"
   >COMMENTS</label
 >
