--- a/src/app/home/love-compassion/love-compassion.component.html
+++ b/src/app/home/love-compassion/love-compassion.component.html
@@ -1,10 +1,8 @@
 <section id="love-compassion">
   <div class="love-compassion-text1">
-    <h2>Perfect liberty power Ministry</h2>
+    <h2>{{ cta2.attributes.title }}</h2>
     <p>
-      But “whoso looketh into the perfect law of liberty, and continueth
-      therein, he being not a forgetful hearer, but a doer of the work, this man
-      shall be blessed in his deed. (James 1 vs 25 )
+      {{ cta2.attributes.body }}
     </p>
   </div>
 
